# SpatialRGPT

./: README.md  environment_setup.sh  pyproject.toml  requirements.txt  setenv.sh
dataset_pipeline/: run_scene_graph.py  run_template_facts.py  run_template_qa.py
dataset_pipeline/configs/: v2.py
dataset_pipeline/osdsynth/processor/: captions.py  instruction.py  pointcloud.py  predicates.py  prompt.py  segment_hf.py
dataset_pipeline/osdsynth/processor/wrappers/: metric3d_v2.py
dataset_pipeline/osdsynth/utils/: logger.py
demo/: gradio_web_server_multi.py
