[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vila"
version = "1.0.0"
description = "VILA: On Pre-training for Visual Language Models"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch",
    "torchvision",
    "transformers==4.40.0",
    "tokenizers>=0.15.2",
    "sentencepiece>=0.2.0",
    "shortuuid",
    "accelerate==0.27.2",
    "peft>=0.9.0",
    "bitsandbytes>=0.41.0",
    "markdown2[all]",
    "numpy>2.1.0",
    "scikit-learn>=1.5.0",
    "gradio>=4.0,<5",
    "gradio_client",
    "requests",
    "httpx>=0.24.0",
    "uvicorn",
    "fastapi",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "timm==0.9.12",
    "openpyxl==3.1.2",
    "pydantic==2.10.6",
    "pytorchvideo==0.1.5",
    "decord==0.6.0",
    "datasets==2.16.1",
    "openai>=1.8.0",
    "webdataset==0.2.86",
    "nltk==3.3",
    "pywsd==1.2.4",
    "opencv-python>=4.10.0",
    "s2wrapper@git+https://github.com/bfshi/scaling_on_scales",
    "pycocotools",
    "tyro",
    "pytest",
    "pre-commit",
    "cuda-python>=13.0.3",
    "robotic_scene_mcp>=0.1.2",
    "mmengine>=0.10.7",
    "open3d>=0.19.0",
    "trimesh>=4.10.1",
    "onnxruntime>=1.23.2",
    "pyequilib==0.3.0",
    "imageio>=2.37.2",
    "omegaconf>=2.3.0",
    "wis3d>=1.0.1",
    "detectron2",
    "mmcv>=2.2.0",
    "gradio-box-promptable-image>=0.0.1",
    "typer>=0.20.0",
    "deepspeed>=0.18.3",
    "segment-anything-hq>=0.3",
    "flash-attn",
]

[project.optional-dependencies]
train = ["deepspeed", "ninja", "wandb"]
eval = ["mmengine", "word2number", "Levenshtein", "nltk", "pywsd"]

[project.urls]
"Homepage" = "https://hanlab.mit.edu/projects/vila"
"Bug Tracker" = "https://github.com/Efficient-Large-Model/VILA-Internal/issues"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "cea-gitlab"
url = "https://gitlab.deeplab.intra.cea.fr/api/v4/projects/1822/packages/pypi/simple"
# Note: uv handles the 'allow-insecure-host' logic via the URL 
# and your global system trust, but you can force it in the config:
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
robotic_scene_mcp = { index = "cea-gitlab" }
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }
flash-attn = { path = "../../../flash_attn-2.7.4+cu130torch2.9-cp312-cp312-linux_x86_64.whl" }
